test/files/neg/t521.check
t521.scala:10: error: class PlainFile needs to be abstract. Missing implementation for:
  def path: String // inherited from class AbstractFile
class PlainFile(val file : File) extends AbstractFile {}
      ^
t521.scala:13: error: overriding val file: java.io.File (defined in class PlainFile);
 val file: java.io.File needs `override` modifier
final class ZipArchive(val file : File, archive : ZipFile) extends PlainFile(file) {
                           ^
t521.scala:13: error: class ZipArchive needs to be abstract. Missing implementation for:
  def path: String // inherited from class AbstractFile
final class ZipArchive(val file : File, archive : ZipFile) extends PlainFile(file) {
            ^
t521.scala:15: error: overriding val path: String (defined in class VirtualFile);
 override def path: String needs to be a stable, immutable value
    override def path = "";
                 ^
four errors found
